[project]
authors = [
  {name = "rx97"},
  {name = "TheWii"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "beet>=0.55.0",
  "mecha>=0.59.2",
  "nbtlib==1.12.1",
  "bolt>=0.38",
  "frozendict>=2.4.0,<3",
  "bolt-control-flow>=0.2.0",
  "rich>=13.2.0",
]
description = "Provides pandas-like expressions capabilities to the bolt extension of mecha"
keywords = [
  "beet",
  "minecraft",
  "bolt",
  "mecha",
  "expressions",
]
license = "MIT"
name = "bolt-expressions"
readme = "README.md"
requires-python = ">=3.14,<4.0"
version = "0.19.2"

[project.urls]
Documentation = "https://rx-modules.github.io/bolt-expressions/"
Homepage = "https://github.com/rx-modules/bolt-expressions"
Repository = "https://github.com/rx-modules/bolt-expressions"

[dependency-groups]
dev = [
  "python-semantic-release>=9.21.0",
  "pytest-insta>=0.1.11",
  "ruff>=0.14.13",
  "pytest>=9.0.2",
]
docs = [
  "mudkip>=0.5.1",
  "pygments",
  "standard-imghdr>=3.13.0",
]

[tool.uv]

[tool.uv.sources]
bolt-control-flow = {git = "https://github.com/rx-modules/bolt-control-flow", rev = "chore/update-to-uv-py-3-14"}
pygments = {git = "https://github.com/rx-modules/pygments"}

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.26,<0.10.0"]

[tool.pytest.ini_options]
addopts = "tests src/bolt_expressions" # --doctest-modules"
minversion = "6.0" 

[tool.ruff.lint]
ignore = ["F403"] # allows "*" imports

[tool.semantic_release]
build_command = "uv build"
major_on_zero = false

commit_author = "github-actions <action@github.com>"
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/bolt_expressions/__init__.py:__version__"]

[tool.mudkip]
preset = "furo"

[tool.mudkip.override]
html_title = "bolt-expressions"
suppress_warnings = ["myst.header"]
